Fix test classpath escaping issue
Fixes issues with test classpath containing special URL characters like '%'.
Path.toUri handles escaping such characters and appends '/' in case path
refers to directoty.